JsonStoreReader: return the files in a folder
we need this, because there can be model types that disappear in
future versions of the package format but in their upgrades we
still want to access them via the folder names (see NwSets and
categories)